# brainstorm

./: Cargo.toml  README.md  TODO.md
docs/: directory_guide.md
src/: error.rs  helpers.rs  main.rs  setup.rs
src/animus/: repl.rs
src/animus/helpers/: command.rs  mod.rs
src/file/: README.txt  animi.rs  cfg.rs  groups.rs  mod.rs  remote.rs  saved.rs  setup.rs
src/group/: mod.rs  repl.rs
src/group/helpers/: autolink.rs  mod.rs
src/meta/: mod.rs  repl.rs
src/meta/helpers/: animate.rs  list.rs  load.rs  mod.rs
src/repl/: animus.rs  brainstorm.rs  config.rs  group.rs  meta.rs  mod.rs
src/repl/animus/: command.rs  report.rs
src/repl/helpers/: file.rs  mod.rs
src/repl/meta/: animate.rs  list.rs  load.rs
